--- a/DRAJESBFC.Rmd
+++ b/DRAJESBFC.Rmd
@@ -94,6 +94,8 @@ $Région, Département, EPCI, BV$
 
 -   Indice de jeunesse, carte
 
+-   [Structure par âge à façon]((1.2_structure.html#structure-par-âge-à-façon))
+
 ### 1.3 [Évolution de la population](1.3_evol.html)
 
 $Région, Département, EPCI, BV$
