--- a/index.Rmd
+++ b/index.Rmd
@@ -54,7 +54,9 @@ $Région, Département, EPCI, BV$
 
 -   15-29 ans / + de 65 ans
 
--   Indice de jeunesse, carte
+-   Indice de jeunesse, pyramides des âges, carte
+
+-   [Structure par âge à façon](1.2_structure.html#structure-par-âge-à-façon)
 
 ### 1.3 [Évolution de la population](1.3_evol.html)
 
