--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -368,6 +368,10 @@ leaflet() %>%
 ```
 
 
+### Flux annuels
+
+[![](images/fluxSC.PNG)</br>\
+flux de nouveaux volontaires par année](https://pierre-stephanelebre.shinyapps.io/fluxSC/)
 
 
 ### Flux arc
