--- a/1.2_structure.Rmd
+++ b/1.2_structure.Rmd
@@ -3,6 +3,9 @@ title: "Structure"
 output: 
   flexdashboard::flex_dashboard:
     orientation: rows
+    vertical_layout: fill
+    horizontal_layout: scroll    
+    self_contained : false
     social: menu
     #source_code: embed
     navbar:
@@ -99,23 +102,8 @@ carto <- function(.map) {
 
 ```
 
-![](images/BFC_s.svg) Régions {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
+# ![](images/BFC_s.svg) Régions {data-orientation="rows" height=30 .storyboard}
 
-Row  {data-height=100}
------------------------------------------------------------------------
-### Données générales
-
-La population de Bourgogne-Franche-Comté est plutôt âgée. L'indice de jeunesse s'établit à 
-**`r  prettyNum(round(region$ind_jeun[3],1),decimal.mark=",")`**, nettement en dessous de la valeur métropolitaine.
-
-Les **`r  prettyNum(round(region$p1529[3]/1000,0)*1000,big.mark=" ")`** jeunes sont sous-représentés et les + de 65 ans sont surreprésentés.
-
-Row {.tabset .tabset-fade}
------------------------------------------------------------------------
-  
 ### Comparaisons régionales
   
 ```{r,echo=F}
@@ -124,8 +112,12 @@ tab <- region_tab %>%
 
 tab %>%  
   credits()
-
 ```   
+***
+La population de Bourgogne-Franche-Comté est plutôt âgée. L'indice de jeunesse s'établit à 
+**`r  prettyNum(round(region$ind_jeun[3],1),decimal.mark=",")`**, nettement en dessous de la valeur métropolitaine.
+
+Les **`r  prettyNum(round(region$p1529[3]/1000,0)*1000,big.mark=" ")`** jeunes sont sous-représentés et les + de 65 ans sont surreprésentés.
 
 ### Structure régionale
 ```{r}
@@ -140,8 +132,9 @@ region %>%
   arrange(REG,Région,âge)  %>%
 hstructure("Région")
 ```
+***
 
-### Pyramide
+### Pyramide BFC
 ```{r}
 pop_age_bfc %>% 
   group_by(AGED100,SEXE) %>%
@@ -161,6 +154,7 @@ pop_age_bfc %>%
   hc_add_theme(thm)  %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 ```
+***
 
 
 ### Carte régionale
@@ -175,24 +169,11 @@ leaflet(carte) %>%
   contour_bfc() 
    
 ```
+***
 
+# ![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30 .storyboard}
 
-![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-
-Row  {data-height=100}
------------------------------------------------------------------------
-### Données générales
-
-La Côte d'Or est le département où les 15/29 ans sont les plus nombreux tandis que le Doubs est celui ou les plus de 65 ans sont les moins nombreux. Dans la Nièvre, le déséquilibre est très marqué. Les plus de 65 ans sont deux fois plus nombreux que les 15/29 ans.
-
-
-  Row {.tabset .tabset-fade}
------------------------------------------------------------------------
-
-### Comparaisons départementales 
+### Comparaisons départementales  
 
 ```{r,echo=F}
 tab <- dep27_tab %>%  
@@ -203,8 +184,10 @@ tab <- dep27_tab %>%
 tab %>%  
   credits()
 ```
+***
+La Côte d'Or est le département où les 15/29 ans sont les plus nombreux tandis que le Doubs est celui ou les plus de 65 ans sont les moins nombreux. Dans la Nièvre, le déséquilibre est très marqué. Les plus de 65 ans sont deux fois plus nombreux que les 15/29 ans.
 
-### Structure départementale
+### Structure par départements
 ```{r}
 departement %>% 
   filter(DEP %in% depbfc) %>%
@@ -217,11 +200,9 @@ departement %>%
   rename(Département=LIBGEO,part=value) %>%
   arrange(DEP,Département,âge) %>%
   hstructure("Département")
-
-
 ```
-
-### Pyramide
+***
+### Pyramides départementales
 ```{r}
 list_of_plots <- map(depbfc, function(x) {
  
@@ -250,117 +231,8 @@ list_of_plots <- map(depbfc, function(x) {
 hw_grid(list_of_plots,ncol = 4, rowheight = 300) %>%
   htmltools::browsable()
 ```
+***
 
-
-### Carte départementale
-```{r}
-carte <- depwgs
-carte@data <- carte@data %>% select(Département=DEP,var)
-carte <- merge(carte,dep_tab %>%  
-                 demo(geo=Département) %>% 
-                 ungroup() %>%
-                 select(-Région),
-               by="Département")
-
-
-leaflet(carte) %>%  
-  carto() %>%
-  contour_bfc() 
-```
-
-![](images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-
-  Row {.tabset .tabset-fade}
------------------------------------------------------------------------
-
-### Comparaisons établissements publics de coopération intercommunale
-  
-```{r,echo=F}
-tab <- epci27_tab %>%
-  demo(geo=EPCI)
-
-tab %>%  
-  credits()
-```
-
-### Tableau filtré
-```{r}
-tab <- tab %>% filter(!EPCI %in% c('BFC','METRO'))
-
-sd <- tab_filtre(geo=EPCI)
-
-filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
-                inline=TRUE, allLevels = FALSE)
-
-sd %>% datafiltre()
-```
-
-### Carte ECPI
-```{r}
-carte <- epcicarto
-carte@data <- carte@data %>% select(EPCI,var)
-carte <- merge(carte,tab,by="EPCI")
-
-
-leaflet(carte) %>%  
-  carto() %>%
-  contour_depbfc() 
-```
-  
-  
-
-![](images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-  
-  Row {.tabset .tabset-fade}
------------------------------------------------------------------------
-  
-### Comparaisons bassins de vie
-```{r,echo=F}
-tab <- bv27_tab %>%
-  demo(geo=BV2022)
-
-tab %>%  
-  credits()
-```  
-  
-### Tableau filtré
-```{r}
-tab <- tab %>% filter(!BV2022 %in% c('BFC','METRO'))
-
-sd <- tab_filtre(geo=BV2022)
-
-filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
-                inline=TRUE, allLevels = FALSE)
-
-sd %>% datafiltre()
-```
-  
-### Carte BV
-```{r}
-carte <- bvcarto
-carte@data <- carte@data %>% select(BV2022,var)
-carte <- merge(carte,tab,by="BV2022")
-
-
-leaflet(carte) %>%  
-  carto() %>%
-  contour_depbfc() 
-```
-
-
-# Structure par âge à façon
-
-Row {data-height="20"}
------------------------------------------------------------------------
-
-Row  {data-height=800}
------------------------------------------------------------------------
 ### Création de classes d'âges à façon
 
 ```{r}
@@ -419,13 +291,101 @@ Soit **`r popbfc`** en Bourgogne-Franche-Comté dont **`r fembfc`** femmes.
 [![](images/ageD.PNG) </br>\
 population des territoires par âge à façon](https://pierre-stephanelebre.shinyapps.io/ageD/)
 
+### Carte départementale
+```{r}
+carte <- depwgs
+carte@data <- carte@data %>% select(Département=DEP,var)
+carte <- merge(carte,dep_tab %>%  
+                 demo(geo=Département) %>% 
+                 ungroup() %>%
+                 select(-Région),
+               by="Département")
 
-*En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="60"}
------------------------------------------------------------------------
+
+leaflet(carte) %>%  
+  carto() %>%
+  contour_bfc() 
+```
+***
+
+# ![](images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30 .storyboard}
+
+### Comparaisons établissements publics de coopération intercommunale
+  
+```{r,echo=F}
+tab <- epci27_tab %>%
+  demo(geo=EPCI)
+
+tab %>%  
+  credits()
+```
+
+### Tableau filtré
+```{r}
+tab <- tab %>% filter(!EPCI %in% c('BFC','METRO'))
+
+sd <- tab_filtre(geo=EPCI)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
+```
+***
+Sélectionnez un ou plusieurs départements pour voir les territoires correspondant
+
+### Carte ECPI
+```{r}
+carte <- epcicarto
+carte@data <- carte@data %>% select(EPCI,var)
+carte <- merge(carte,tab,by="EPCI")
+
+
+leaflet(carte) %>%  
+  carto() %>%
+  contour_depbfc() 
+```
+  
+  
+
+# ![](images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30 .storyboard}
+
+### Comparaisons bassins de vie 2022
+```{r,echo=F}
+tab <- bv27_tab %>%
+  demo(geo=BV2022)
+
+tab %>%  
+  credits()
+```  
+  
+### Tableau filtré
+```{r}
+tab <- tab %>% filter(!BV2022 %in% c('BFC','METRO'))
+
+sd <- tab_filtre(geo=BV2022)
+
+filter_checkbox("dep","Département",sd,group=~filtre_DEP, 
+                inline=TRUE, allLevels = FALSE)
+
+sd %>% datafiltre()
+```
+***
+Sélectionnez un ou plusieurs départements pour voir les territoires correspondant
+  
+### Carte BV 2022
+```{r}
+carte <- bvcarto
+carte@data <- carte@data %>% select(BV2022,var)
+carte <- merge(carte,tab,by="BV2022")
+
+
+leaflet(carte) %>%  
+  carto() %>%
+  contour_depbfc() 
+```
+
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
 
 **Sources :**  
 
