--- a/2.2_presco.Rmd
+++ b/2.2_presco.Rmd
@@ -2,7 +2,9 @@
 title: "Acceuil des enfants d'âge préscolaire"
 output: 
   flexdashboard::flex_dashboard:
-    vertical_layout: scroll
+    orientation: rows
+    vertical_layout: fill
+    horizontal_layout: scroll
     social: menu
     #source_code: embed
     navbar:
@@ -123,23 +125,7 @@ carto <- function(.map) {
 ```
 
 
-![](images/BFC_s.svg) Régions {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="100"}
------------------------------------------------------------------------
-
-### Données générales sur les accueils des enfants d'âge préscolaire
-
-**`r prettyNum(round(ACM_PMI[1,3]/100,0)*100,big.mark = " ")`** places en accueil collectif en Bourgogne-Franche-Comté soit **`r prettyNum(round(ACM_PMI[8,3],1),decimal.mark = ",")` %** places pour 100 enfants nés au cours des 3 dernières années.  
-**`r prettyNum(round(ACM_PMI[9,3]/10,0)*10,big.mark = ",")`** places en accueil familial.    
-**`r prettyNum(round(ACM_PMI[10,3],1),decimal.mark = ",")` %** des enfants de moins de ans sont scolarisés.  
-**`r prettyNum(round(ACM_PMI[12,3]/100,0)*100,big.mark = " ")`** assistantes maternelles et **`r prettyNum(round(ACM_PMI[13,3]/100,0)*100,big.mark = " ")`** gardes d'enfants à domicile.
-
-
-Row {.tabset .tabset-fade .tabset-pills data-height="900"}
------------------------------------------------------------------------
+# ![](images/BFC_s.svg) Régions {data-orientation="rows" height=30 .storyboard}
 
 ### Accueils d'enfants d'âge préscolaire
 
@@ -153,20 +139,24 @@ tab %>%
   credits()
 
 ```
+***
+**`r prettyNum(round(ACM_PMI[1,3]/100,0)*100,big.mark = " ")`** places en accueil collectif en Bourgogne-Franche-Comté soit **`r prettyNum(round(ACM_PMI[8,3],1),decimal.mark = ",")` %** places pour 100 enfants nés au cours des 3 dernières années.  
+**`r prettyNum(round(ACM_PMI[9,3]/10,0)*10,big.mark = ",")`** places en accueil familial.    
+**`r prettyNum(round(ACM_PMI[10,3],1),decimal.mark = ",")` %** des enfants de moins de ans sont scolarisés.  
+**`r prettyNum(round(ACM_PMI[12,3]/100,0)*100,big.mark = " ")`** assistantes maternelles et **`r prettyNum(round(ACM_PMI[13,3]/100,0)*100,big.mark = " ")`** gardes d'enfants à domicile.
 
-### Comparaisons
-7e région en taux d'accueils pour 100 enfants nés au cours des 3 dernières années, une très large majorité de multi-accueils en Bourgogne-Franche-Comté
+### Comparaisons régionales
+
 ```{r}
 tab <- tab %>% slice(-14) 
 
 hPMI()
 
 ```
-
+***
+7e région en taux d'accueils pour 100 enfants nés au cours des 3 dernières années, une très large majorité de multi-accueils en Bourgogne-Franche-Comté
 
 ### Taux de scolarisation des enfants de 2 ans
-
-4e région pour le taux de scolarisation des enfants de 2 ans
 
 ```{r}
 tab %>%
@@ -182,9 +172,11 @@ tab %>%
   hc_add_theme(thm) %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 ```
+***
+4e région pour le taux de scolarisation des enfants de 2 ans
 
 
-### Carte
+### Carte régionale
 ```{r}
 tab <- tab %>%  
   select(Nom,
@@ -204,29 +196,13 @@ leaflet(carte) %>%
   contour_bfc()
  
 ```
-
+***
 
   
   
-![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="100"}
------------------------------------------------------------------------
+# ![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30 .storyboard}
 
-
-### Données générales sur les accueils des enfants d'âge préscolaire
-
-La Côte d'Or mieux dotée en accueil collectif que le niveau national.
-Des écarts importants dans la région : moins de 11 places pour 100 enfants en Haute-Saône.
-
-Dans la Nièvre et la Saône et Loire, les taux de scolarisation des enfants de 2 ans sont bien supérieurs à la moyenne nationale.
-
-Row {.tabset .tabset-fade .tabset-pills data-height="900"}
------------------------------------------------------------------------
-
-### Accueils d'enfants d'âge préscolaire
+### Accueils d'enfants d'âge préscolaire par départements
 
 ```{r}
 tab <- ACM_PMI_dep %>% 
@@ -238,14 +214,14 @@ FRANCHE-COMTE`,.before = `France métropolitaine`) %>%
 
 tab %>%
   credits()
-  
-
-
 ```
+***
+La Côte d'Or mieux dotée en accueil collectif que le niveau national.
+Des écarts importants dans la région : moins de 11 places pour 100 enfants en Haute-Saône.
 
+Dans la Nièvre et la Saône et Loire, les taux de scolarisation des enfants de 2 ans sont bien supérieurs à la moyenne nationale.
 
-### Comparaisons
-Les crèches collectives bien plus représentées dans le Doubs. La Côte d'Or mieux équipée pour les accueils collectifs.
+### Comparaisons départementales
 
 ```{r}
 tab <- tab %>% slice(1:8) 
@@ -253,10 +229,11 @@ tab <- tab %>% slice(1:8)
 hPMI()
 
 ```
-
+***
+Les crèches collectives bien plus représentées dans le Doubs. La Côte d'Or mieux équipée pour les accueils collectifs.
 
 ### Taux de scolarisation des enfants de 2 ans
-D'avantage d'enfants de 2 ans scolarisés dans la Nièvre et la Saône et Loire. Moins dans l'Yonne et le Doubs.
+
 ```{r}
 tab %>%
   select(Nom,`Taux de scolarisation des enfants de 2 ans<sup>2</sup>`) %>%
@@ -271,11 +248,12 @@ tab %>%
   hc_add_theme(thm) %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 ```
+***
+D'avantage d'enfants de 2 ans scolarisés dans la Nièvre et la Saône et Loire. Moins dans l'Yonne et le Doubs.
 
+### Carte départementale
 
-### Carte
 ```{r}
-
 tab <- tab %>%  
   select(Nom,
          `Taux d'accueils collectifs` = 
@@ -292,15 +270,10 @@ leaflet(carte) %>%
   carto() %>%
   contour_depbfc()
 ```
+***
 
 
-
-*En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="60"}
------------------------------------------------------------------------
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
 
 **Sources :**  
 
