--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -2,7 +2,9 @@
 title: "Service civique"
 output: 
   flexdashboard::flex_dashboard:
-    vertical_layout: scroll
+    orientation: rows
+    vertical_layout: fill
+    horizontal_layout: scroll
     social: menu
     #source_code: embed
     navbar:
@@ -53,34 +55,24 @@ tab_sc <- function(.tbl){
 
 ```
 
-![](images/BFC_s.svg) Régions {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="100"}
------------------------------------------------------------------------
+# ![](images/BFC_s.svg) Régions {data-orientation="rows" height=30 .storyboard}
 
 ### Définition du **Service civique**
+
+**3 100** missions de service civique en Bourgogne-Franche-Comté en 2022.  
+**3 000** volontaires originaires de la région.  
+Des missions tournées principalement vers l'éducation pour tous et la solidarité.
+```{r}
+#créer des value box pour les données au dessus
+```
+
+***
 
 Créé par la loi du 10 mars 2010, le service civique est un engagement volontaire au service de l’intérêt général, parce que chaque individu a quelque chose à apporter à la collectivité. Il s’adresse aux jeunes de 16 à 25 ans, et jusqu’à 30 ans pour les jeunes en situation de handicap, et sans condition de diplôme.
 Les volontaires ne sont pas rémunérés puisque le service civique n’est pas un emploi. Ils sont indemnisés à hauteur de 580,55 € net par mois, dont 472,97 € sont pris en charge par l’État et 107,58 € par la structure d’accueil.
 Les missions  s’effectuent pendant 6 à 12 mois  et  sur une durée hebdomadaire de 24h à 48h, réparties sur 6 jours maximum. Elles peuvent avoir lieu  dans  des associations, des établissement publics, des services de l'Etat ou encore dans des collectivités territoriales.
 
-Row {data-height="100"}
------------------------------------------------------------------------
-
-### Données générales
-
-**3 100** missions de service civique en Bourgogne-Franche-Comté en 2022.  
-**3 000** volontaires originaires de la région.  
-Des missions tournées principalement vers l'éducation pour tous et la solidarité.
-
-Row {.tabset .tabset-fade .tabset-pills data-height="600"}
------------------------------------------------------------------------
-
 ### évolution annuelle des missions et volontaires
-
-**Légèrement plus de missions que de volontaires dans la région.**
 
 ```{r}
 baseSC %>% 
@@ -104,10 +96,10 @@ baseSC %>%
   hc_add_theme(thm) %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 ```
+***
+**Légèrement plus de missions que de volontaires dans la région.**
 
 ### Domaines de mission
-
-**Une majorité de missions dans l'éducation populaire et la solidarité. **
 
 ```{r}
 baseSC %>% 
@@ -124,11 +116,10 @@ baseSC %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 
 ```
-
+***
+**Une majorité de missions dans l'éducation populaire et la solidarité. **
 
 ### Origine de l'agrément
-
-**Une part prépondérante des agréments nationaux.**
 
 ```{r}
 baseSC %>% 
@@ -147,11 +138,10 @@ baseSC %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 
 ```
-
+***
+**Une part prépondérante des agréments nationaux.**
 
 ### Répartition par âge
-
-**Un pic de volontaires entre 19 et 20 ans.**
 
 ```{r}
 
@@ -164,19 +154,12 @@ hchart( density( baseSC[baseSC$depvol %in% depbfc,]$age ) ,
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 
 ```
+***
+**Un pic de volontaires entre 19 et 20 ans.**
 
-
-![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {.tabset .tabset-fade .tabset-pills data-height="800"}
------------------------------------------------------------------------
-
+# ![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30 .storyboard}
 
 ### évolutions départementales
-
-**Une forte progression jusqu'en 2017 puis un recul lié à la crise sanitaire en 2020, un rebond en 2021 et à nouveau une baisse en 2022.**
 
 ```{r}
 baseSC %>% 
@@ -198,11 +181,11 @@ baseSC %>%
   hc_exporting(enabled = TRUE, filename = "custom-file-name")
 
 ```
+***
+**Une forte progression jusqu'en 2017 puis un recul lié à la crise sanitaire en 2020, un rebond en 2021 et à nouveau une baisse en 2022.**
 
 
 ### Caractéristiques des volontaires de la région
-
-**Une large majorité de femmes parmi les volontaires, près d'un tiers de peu diplômés, 30% étaient chômeurs auparavant, un contrat sur cinq rompu avant son terme dont 9% pour embauche.**
 
 ```{r}
 
@@ -252,9 +235,8 @@ tab %>%
 
 
 ```
-
-
-
+***
+**Une large majorité de femmes parmi les volontaires, près d'un tiers de peu diplômés, 30% étaient chômeurs auparavant, un contrat sur cinq rompu avant son terme dont 9% pour embauche.**
 
 ### Carte départementale
 
@@ -301,7 +283,6 @@ leaflet(cartedep) %>%
 
 ```
 
-
 ### Flux (volontaires -> mission)
 
 ```{r}
@@ -340,7 +321,6 @@ leaflet() %>%
 ```
 
 ### Flux 2
-
 
 ```{r}
 
@@ -401,18 +381,9 @@ mapdeck( style = mapdeck_style("dark"), pitch = 45 ) %>%
 
 
 
-Engagement international {data-orientation="rows" data-icon="fa-globe-africa"}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="800"}
------------------------------------------------------------------------
-
+# Engagement international {data-orientation="rows" data-icon="fa-globe-africa" .storyboard}
 
 ### Missions à l'étranger
-
-**Des liens privilégiés avec l'Allemagne**
-
 
 ```{r}
 baseSC %>%
@@ -432,17 +403,12 @@ baseSC %>%
            footnote_as_chunk = T) 
 
 ```
+***
+**Des liens privilégiés avec l'Allemagne**
 
-`r fa(name = "fas fa-city")` Quartier politique de la ville {data-orientation="rows"}
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="600"}
------------------------------------------------------------------------
+# `r fa(name = "fas fa-city")` Quartier politique de la ville {data-orientation="rows" .storyboard}
 
 ### Missions effectuées par les jeunes en QPV
-
-**Environ un jeune de 16 à 25 ans sur 100 s'engage dans une mission de Service civique, y compris dans les QPV, presque un volontaire sur cinq issus de quartier prioritaire dans le Territoire de Belfort et le Doubs.**
 
 ```{r}
 baseSC %>%
@@ -491,15 +457,10 @@ baseSC %>%
            footnote_as_chunk = T)
 
 ```
+***
+**Environ un jeune de 16 à 25 ans sur 100 s'engage dans une mission de Service civique, y compris dans les QPV, presque un volontaire sur cinq issus de quartier prioritaire dans le Territoire de Belfort et le Doubs.**
 
-
-
-*En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
-=======================================================================
-Row {data-height="20"}
------------------------------------------------------------------------
-Row {data-height="60"}
------------------------------------------------------------------------
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px" }
 
 **Sources :**  
 
